[gd_scene format=3 uid="uid://ul4b2imlm4sg"]

[ext_resource type="Texture2D" uid="uid://dqadvvqa4wjul" path="res://Sprites/Card.webp" id="1_gjfx2"]
[ext_resource type="Texture2D" uid="uid://dhctr3dgetuj7" path="res://Sprites/cardtest.webp" id="2_d460q"]
[ext_resource type="Script" uid="uid://d4cec4t5uv6ll" path="res://UI/card.gd" id="2_tsfa4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjfx2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d460q"]
bg_color = Color(0.56, 0, 0.0093331905, 0.12156863)

[node name="Card" type="Sprite2D" unique_id=1675871370]
texture = ExtResource("1_gjfx2")
script = ExtResource("2_tsfa4")

[node name="ButtonSelect" type="Button" parent="." unique_id=638695346]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -175.0
offset_right = -125.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_gjfx2")

[node name="Name" type="Label" parent="." unique_id=1331328957]
offset_left = -125.0
offset_top = -171.0
offset_right = 125.0
offset_bottom = -141.0
theme_override_font_sizes/font_size = 21
text = "Пусто"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=364526527]
position = Vector2(0, -61)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_d460q")

[node name="TextLabel" type="Label" parent="." unique_id=1483449813]
offset_left = -119.999985
offset_top = 14.0
offset_right = 118.00003
offset_bottom = 142.0
theme_override_font_sizes/font_size = 21
text = "
"
horizontal_alignment = 1

[node name="ButtonInfo" type="Button" parent="." unique_id=776127093]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -207.0
offset_right = -125.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_d460q")
text = "Подробнее"

[connection signal="pressed" from="ButtonSelect" to="." method="_on_button_select_pressed"]
[connection signal="pressed" from="ButtonInfo" to="." method="_on_button_info_pressed"]
